# NixOS-WSL

./: .editorconfig  .envrc  .gitignore  README.md  README.rst  VERSION  build-tarball.nix  configuration.nix  flake.nix  module.nix  nixos.nix  syschdemd.nix  syschdemd.sh
.github/: dependabot.yml  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/actions/build-nix-expression/: action.yml
.github/workflows/: main.yml  on_command.yml  on_label.yml  on_push.yml  on_release.yml  release-drafter-label.yml  release-drafter.yml  release.yml  run_build.yml  run_checks.yml  run_docs.yml  run_package.yml  run_tests.yml  run_validate.yml  tests.yml  update-flakes.yml
Launcher/: .editorconfig  .gitignore  Launcher.sln  Launcher.sln.DotSettings  default.nix
Launcher/Launcher/: Launcher.csproj  NativeMethods.json  NativeMethods.txt  packages.lock.json
Launcher/Launcher-Appx/: Launcher-Appx.wapproj  Package.appxmanifest
Launcher/WslApiAdapter/: WslApiAdapter.csproj
checks/: dotnet-format.nix  nixpkgs-fmt.nix  nixpkgs-input.nix  rustfmt.nix  shfmt.nix  side-effects.nix  username.nix
docs/: .gitignore  book.toml  custom.css  custom.js  default.nix
docs/src/: SUMMARY.md  building.md  design.md  how-to.md  howto.md  install.md
modules/: 24.05-compat.nix  build-tarball.nix  clipboard.nix  default.nix  docker-desktop.nix  docker-native.nix  installer.nix  interop.nix  nvidia.nix  passwd.nix  recovery.nix  ssh-agent.nix  systemd-tarball.nix  usbip.nix  version.nix  vscode-remote-wsl-extension-workaround.nix  welcome.nix  windows-hello.nix  wsl-conf.nix  wsl-distro.nix
modules/docker/: default.nix  native.nix
modules/systemd/: container.nix  default.nix  native.nix  syschdemd.nix
scripts/: syschdemd.nix  syschdemd.sh  wrapper.sh
scripts/native-systemd-shim/: Cargo.toml  shim.nix
scripts/native-utils/: Cargo.toml  default.nix
scripts/native-utils/src/: shim.rs  split_path.rs
tests/: README.md  basic-functionality.Tests.ps1  basic-functionality.spec.ps1  exit-codes.Tests.ps1  exit-codes.spec.ps1  exitcodes.spec.ps1  extra-files.Tests.ps1  installer.ps1  installer.spec.ps1  shells.Tests.ps1  systemd-services.Tests.ps1  systemd-user.Tests.ps1
tests/docker/: docker-native.nix  docker.Tests.ps1
tests/envfs/: envfs.Tests.ps1  envfs.nix
tests/lib/: Dockerfile  init_linux.ps1  lib.ps1  lib_linux.ps1
tests/login-shell/: login-shell.Tests.ps1  session-variables.nix
tests/slow-activation/: delay-activation.nix  slow-activation.Tests.ps1
tests/username-change/: username-change.Tests.ps1  username-change.nix
utils/: Cargo.toml  default.nix
utils/src/: shell_wrapper.rs  shim.rs  split_path.rs  systemd_container.rs  systemd_shim.rs  wrapper.rs
(+67 files in other folders)
