[package]
name = "nixos-wsl-utils"
version = "0.1.0"
edition = "2021"
# Keep this in sync with NixOS stable
rust-version = "1.69.0"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
nix = { version = "0.27.1", features = ["mount", "process"] }
log = "0.4.20"
kernlog = "0.3.1"

# pinned to prevent running over Rust 1.69
clap = { version = "<4.4", features = ["derive"] }
clap_lex = "<0.6.1"
anstyle = "<1.0.3"
anstyle-parse = "<0.2.2"

[[bin]]
name = "systemd-shim"
path = "src/shim.rs"

[[bin]]
name = "split-path"
path = "src/split_path.rs"
