[package]
name = "nixos-wsl-utils"
version = "0.1.0"
edition = "2021"
# Keep this in sync with NixOS stable
rust-version = "1.69.0"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
nix = { version = "0.30.0", features = ["mount", "process", "user", "inotify"] }
log = "0.4.21"
kernlog = "0.3.1"
systemd-journal-logger = "2.1.1"

# pinned to prevent running over Rust 1.69
clap = { version = "<4.6", features = ["derive"] }
clap_lex = "<0.7.6"
anstyle = "<1.0.12"
anstyle-parse = "<0.2.8"

[[bin]]
name = "systemd-shim"
path = "src/shim.rs"

[[bin]]
name = "split-path"
path = "src/split_path.rs"

[[bin]]
name = "shell-wrapper"
path = "src/shell_wrapper.rs"
