[package]
name = "nixos-wsl-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
nix = { version = "0.25.0", features = ["process"] }
log = "0.4.17"
kernlog = "0.3.1"
clap = { version = "4.1.4", features = ["derive"] }

[[bin]]
name = "systemd-shim"
path = "src/shim.rs"

[[bin]]
name = "split-path"
path = "src/split_path.rs"
